--- a/butcher-game/index.html
+++ b/butcher-game/index.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja Strona</title>
-    <!-- <link rel="stylesheet" href="mystyle.css"> -->
+    <link rel="stylesheet" href="styles/board.css">
 </head>
 
 <body>
     <h1>Gierka IO</h1>
-
-
     <div id="game-board"></div>
 
     <script type="module" src="./game-loop.js"></script>
