--- a/butcher-game/index.html
+++ b/butcher-game/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja Strona</title>
-    <link rel="stylesheet" href="styles/board.css">
+    <link rel="stylesheet" href="assets/styles/board.css">
 </head>
 
 <body>
     <h1>Gierka IO</h1>
+    <canvas id="playerDraw"></canvas>
     <div id="game-board"></div>
 
     <script type="module" src="./game-loop.js"></script>
