added new draw technique, from src, added global variables

--- a/butcher-game/index.html
+++ b/butcher-game/index.html
@@ -10,8 +10,17 @@
 
 <body>
     <h1>Gierka IO</h1>
-    <canvas id="playerDraw"></canvas>
-    <div id="game-board"></div>
+
+    <canvas id = "game-board"></canvas>
+
+    <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+            frameborder="0"
+            allow="autoplay; encrypted-media"
+            allowfullscreen>
+    </iframe>
 
     <script type="module" src="./game-loop.js"></script>
 </body>
