--- a/butcher-game/index.html
+++ b/butcher-game/index.html
@@ -4,24 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moja Strona</title>
+    <title>Butcher Game</title>
     <link rel="stylesheet" href="assets/styles/board.css">
 </head>
 
 <body>
     <h1>Gierka IO</h1>
-
     <canvas id = "game-board"></canvas>
-
-    <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-            frameborder="0"
-            allow="autoplay; encrypted-media"
-            allowfullscreen>
-    </iframe>
-
     <script type="module" src="./game-loop.js"></script>
 </body>
 
