added login player, jwt, and method which render specific player by UUID

--- a/butcher-game/index.html
+++ b/butcher-game/index.html
@@ -10,8 +10,14 @@
 
 <body>
     <h1>Gierka IO</h1>
-    <canvas id = "game-board"></canvas>
-    <script type="module" src="./game-loop.js"></script>
+    <label>Login:</label>
+    <input type="text" id="login" placeholder="type login">
+    <label>Password:</label>
+    <input type="text" id="password" placeholder="type password">
+    <button onclick="loginPlayer()">Click me</button>
+
+
+    <script src="./account/login-player.js"></script>
 </body>
 
 </html>
