--- a/butcher-game/index.html
+++ b/butcher-game/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Butcher Game</title>
     <link rel="stylesheet" href="assets/styles/board.css">
+    <script>
+        if(localStorage.getItem("jwt")){
+        window.document.location.href = "game.html";
+        }
+    </script>
 </head>
 
 <body>
@@ -14,10 +19,10 @@
     <input type="text" id="login" placeholder="type login">
     <label>Password:</label>
     <input type="text" id="password" placeholder="type password">
-    <button onclick="loginPlayer()">Click me</button>
+    <button onclick="authPlayer()">Click me</button>
 
 
-    <script src="./account/login-player.js"></script>
+    <script src="authorization/auth-player.js"></script>
 </body>
 
 </html>
